# tiny_vect

./: LICENSE  README.md
tiny_vect/: Cargo.toml  README.md
tiny_vect/src/: lib.rs  vect2.rs  vect3.rs
tiny_vect/tests/: vect2_tests.rs  vect3_tests.rs
